@@ -6,6 +6,8 @@
     drops the connection
   * Option not to redirect stdout into logfile
   * Fixed minor memory leak in rehash
+  * Fixed nick rotation
+  * Fixed sample-miaurc
 
 0.5.4-p3 - "compatible catnap"
 
